k8s/legacy/gateway-ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-users-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /users$1
spec:
  ingressClassName: nginx
  rules:
    - host: taskmanager.local
      http:
        paths:
          - path: /api/users(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-tasks-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /tasks$1
spec:
  ingressClassName: nginx
  rules:
    - host: taskmanager.local
      http:
        paths:
          - path: /api/tasks(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tasks-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: taskmanager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
